--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ constraintlayout = "2.1.4"
 firebaseCrashlytics = "18.6.2"
 googleGmsGoogleServices = "4.4.1"
 googleFirebaseCrashlytics = "2.9.9"
+percent = "28.0.0"
 roundedprogressbar = "1.0.0"
 firebasePerf = "21.0.0"
 
@@ -27,6 +28,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics", version.ref = "firebaseCrashlytics" }
+percent = { module = "com.android.support:percent", version.ref = "percent" }
 roundedprogressbar = { module = "com.github.MackHartley:RoundedProgressBar", version.ref = "roundedprogressbar" }
 google-firebase-perf = { group = "com.google.firebase", name = "firebase-perf", version.ref = "firebasePerf" }
 
