--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.4.2"
+androidCustomCheckbox = "Tag"
 firebaseBom = "32.7.2"
 glide = "4.16.0"
 junit = "4.13.2"
@@ -17,6 +18,7 @@ roundedprogressbar = "1.0.0"
 firebasePerf = "21.0.0"
 
 [libraries]
+android-custom-checkbox = { module = "com.github.Stjin:android-custom-checkbox", version.ref = "androidCustomCheckbox" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-perf = { module = "com.google.firebase:firebase-perf" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
