--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
     implementation 'com.github.MackHartley:RoundedProgressBar:3.0.0'
+    implementation 'com.github.onurkagan:KSnack:1.1.2'
     implementation "com.google.firebase:firebase-core:21.1.1"
 
 }
