--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.4.2"
 androidCustomCheckbox = "Tag"
 firebaseBom = "32.7.2"
+firebaseCore = "21.1.1"
 glide = "4.16.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -20,7 +21,9 @@ firebasePerf = "21.0.0"
 
 [libraries]
 android-custom-checkbox = { module = "com.github.Stjin:android-custom-checkbox", version.ref = "androidCustomCheckbox" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-core = { module = "com.google.firebase:firebase-core", version.ref = "firebaseCore" }
 firebase-perf = { module = "com.google.firebase:firebase-perf" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
